--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,8 @@
   --color-bg-main: #222831;
   --gradient: linear-gradient(91deg, rgba(144, 217, 224, 0.90) 0.2%, rgba(84, 96, 230, 0.90) 100%);
   --gradient-inverted: linear-gradient(256deg, rgba(144, 217, 224, 0.90) 9.04%, rgba(84, 96, 230, 0.90) 92.2%);
-  --font: "Montserrat", sans-serif;
+  --first-font: "Roboto", sans-serif;
+  --second-font: "Montserrat", sans-serif;
 }
 
 * {
@@ -15,7 +16,7 @@
 }
 
 body {
-	font-family: var(--font);
+	font-family: var(--first-font);
 	color: var(--color-primary);
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
