--- a/src/style.css
+++ b/src/style.css
@@ -7,8 +7,8 @@
   --color-bg-main: #222831;
   --gradient: linear-gradient(91deg, rgba(144, 217, 224, 0.90) 0.2%, rgba(84, 96, 230, 0.90) 100%);
   --gradient-inverted: linear-gradient(256deg, rgba(144, 217, 224, 0.90) 9.04%, rgba(84, 96, 230, 0.90) 92.2%);
-  --first-font: "Roboto", sans-serif;
-  --second-font: "Montserrat", sans-serif;
+  --font-family: "Roboto", sans-serif;
+  --second-family: "Montserrat", sans-serif;
 }
 
 * {
@@ -16,7 +16,7 @@
 }
 
 body {
-	font-family: var(--first-font);
+	font-family: var(--font-family);
 	color: var(--color-primary);
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
